--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -159,6 +159,20 @@ SCHEDULED: <2021-04-10 周六 13:20>
 - State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
   暂时没需求.
 DEADLINE: <2021-04-30 周五>
+** TODO [#A] 手机号码切换                                           :event:
+SCHEDULED: <2021-06-12 周六 09:00>
+- [ ] 切换手机号绑定(18516114761\rightarrow19128277021 [0%]
+  - [ ] 微信
+  - [ ] 支付宝
+  - [ ] 京东
+  - [ ] 天猫
+  - [ ] 淘宝
+  - [ ] 招商银行(营业厅办理)
+  - [ ] 火星
+  - [ ] Apple
+  - [ ] QQ
+  - [ ] Steam
+- [ ] 联通手机号停机
 * Appointment
 ** TODO [#B] 组装一台性价比高的台式机用于开发和娱乐               :shopping:
 <2021-06-01 周二>--<2021-06-30 周三>
