--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -152,15 +152,16 @@ DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#C] 办理电信宽带业务                                       :event:
-SCHEDULED: <2021-04-10 周六 13:20>
+** DONE [#C] 办理电信宽带业务                                        :event:
+CLOSED: [2021-06-07 Mon 20:17] SCHEDULED: <2021-04-10 周六 13:20>
 :PROPERTIES:
 :END:
+- State "DONE"       from "TODO"       [2021-06-07 Mon 20:17] \\
+  129每月, 下行300上行，下行40
 - State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
   暂时没需求.
-DEADLINE: <2021-04-30 周五>
 * Appointment
-** TODO [#B] 组装一台性价比高的台式机用于开发和娱乐               :shopping:
+** TODO 组装一台性价比高的台式机用于开发和娱乐                    :shopping:
 <2021-06-01 周二>--<2021-06-30 周三>
 - State "WAIT"       from "TODO"       [2021-04-10 周六 14:03] \\
   1. 显卡太贵
@@ -182,8 +183,10 @@ DEADLINE: <2021-04-30 周五>
 |   | keyboard    |     0 |       |       |
 |   | earphone    |     0 |       |       |
 可能还需要线缆收纳, 硅脂, 防静电手环等设备
-** WAIT [#C] 爬火炉山                                               :event:
+** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
+** TODO 处理宽带光衰问题                                              :date:
+<2021-06-12 Sat 09:00>--<2021-06-13 Sun 21:00>
 * Project
 * Someday
