[org] update note

--- a/src/org/gtd/data/9f/4da250-7217-4dae-b806-bb1d74142050/游戏编程模式.org
+++ b/src/org/gtd/data/9f/4da250-7217-4dae-b806-bb1d74142050/游戏编程模式.org
@@ -875,6 +875,9 @@
 8. [[*模板函数模式][模板函数模式]]与沙盒相反, 它是基类定义骨架, 子类来实现
 9. 可以将此模式当成[[*外观模式][外观模式]]的一个变种
 * 类型对象
+1. 什么是类型对象
+   #+begin_verse
+   #+end_verse
 * 组件模式
 * 事件队列
 * 服务定位器
