--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -24,13 +24,27 @@ DEADLINE: <2021-06-12 周六 23:00 +1m> SCHEDULED: <2021-06-12 周六 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-06-13 Sun 23:00 ++1w> SCHEDULED: <2021-06-12 Sat 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2021-06-20 周日 23:00 ++1w> SCHEDULED: <2021-06-19 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-06-06 Sun 23:55]
+:LAST_REPEAT: [2021-06-11 周五 17:11]
 :END:
+- State "DONE"       from "TODO"       [2021-06-11 周五 17:11] \\
+  1. 完成了多益第二季度的季度报告
+  2. 完成了多益的转正自评(网页版)
+  3. 完成了单人多队的工单
+     1. 重构了战斗布局界面, 将若干个子界面设置为可以动态替换的类型, 方便扩展
+     2. 英雄选框直接抽出来做了一个基类, 多队战斗继承后重载一个接口完成了多队共享英雄选择状态的需求
+     3. 战斗结束和暂停页面多队都实现了子类, 通过战斗布局界面的设置子界面接口完成功能跳转
+     4. 战斗状态传递通过逻辑层提供的接口完成
+     5. 一场战斗结束后逻辑层会发送在场单位的状态, 通过这个状态设置下一场胜利方单位的在场状态
+  ------------------------------------------------
+  1. 安装了电信300m宽带, 处理了宽带光衰的问题
+  ------------------------------------------------
+  1. 这周学习任务完成的还行, 只缺了一天
+  2. 感觉自己apex又变菜了, 蚌埠住了
 - State "DONE"       from "TODO"       [2021-06-06 Sun 23:55] \\
   1. 本周在实现单人多队战斗，截止到今天完成60%
      1. 主要工作点:
@@ -178,9 +192,11 @@ DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** TODO 处理宽带光衰问题                                              :date:
+** DONE 处理宽带光衰问题                                             :date:
+CLOSED: [2021-06-11 周五 20:10]
+- State "DONE"       from "TODO"       [2021-06-11 周五 17:10]
 <2021-06-12 Sat 09:00>--<2021-06-13 Sun 21:00>
-** DONE [#C] 办理电信宽带业务                                        :event:
+** DONE 办理电信宽带业务                                            :event:
 CLOSED: [2021-06-07 Mon 20:17] SCHEDULED: <2021-04-10 周六 13:20>
 :PROPERTIES:
 :END:
@@ -188,7 +204,7 @@ CLOSED: [2021-06-07 Mon 20:17] SCHEDULED: <2021-04-10 周六 13:20>
   129每月, 下行300上行，下行40
 - State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
   暂时没需求.
-** TODO [#A] 手机号码切换                                            :event:
+** TODO 手机号码切换                                                :event:
 SCHEDULED: <2021-06-12 周六 09:00>
 - [ ] 切换手机号绑定(18516114761\rightarrow19128277021 [0%]
   - [ ] 微信
