--- a/src/org/ref/游戏编程模式.org
+++ b/src/org/ref/游戏编程模式.org
@@ -876,8 +876,98 @@
 9. 可以将此模式当成[[*外观模式][外观模式]]的一个变种
 * 类型对象
 1. 什么是类型对象
-   #+begin_verse
-   #+end_verse
+   #+BEGIN_VERSE
+   "通过创建一个类来支持新类型的灵活创建, 其每个实例都代表不同的对象类型"
+   定义一个类型对象和一个持有类型对象得类. 每个类型对象实例表示一个不同的逻辑类型
+   . 每个持有类型对象的类引用一个描述其类型的类型对象
+   #+END_VERSE
+2. 经典场景, 怪物种类
+   #+BEGIN_SRC cpp
+     class Breed {
+      public:
+       // 模拟继承
+       Breed(Breed* parent, int health, const string& attack)
+           : _parent(parent),
+             _health(health),
+             _attack(attack) {
+         if (_parent != nullptr) {
+           if (_health == 0) {
+             _health = _parent->getHealth();
+           }
+           if (_attack.empty()) {
+             _attack = _parent->getAttack();
+           }
+         }
+       }
+
+       int getHealth() {return _health;}
+       const string& getAttack() {return _attack;}
+
+       Monster* newMonster() {
+         return new Monster(*this);
+       }
+
+      private:
+       Breed* _parent;
+       int _health;
+       string _attack;
+     };
+
+     class Monster {
+      public:
+       Monster(Breed& breed)
+           : _health(breed.getHealth()),
+             _breed(breed) {}
+
+       const string& getAttach() {
+         return _breed.getAttack();
+       }
+
+      private:
+       int _health;
+       Breed& _breed;
+     };
+   #+END_SRC
+   每一个Breed的实例都是一个新的怪物类型, 只需要两个类就可以创造无限的怪物体系,
+   并且实例可以在运行时动态创建, 修改数据无需重新编译. 模拟的单继承也可以有效的
+   提高数据复用.
+3. 使用场景
+   当你需要定义一系列不同种类的东西, 却又不想将它们硬编码, 尤其是以下条件成立时:
+   * 你不知道将来会有什么类型
+   * 你需要在不重新编译的情况下, 修改或添加新的类型
+   但是使用的时候要注意两点:
+   * 确保类型实例存在
+   * 想好如何处理每个类型的行为, 可以通过以下方法:
+     - 创建一个预定义的行为集合, 在每个类型里面持有指向行为的指针(虚函数)
+     - 采用[[*解释器模式][解释器模式]]或者[[*字节码][字节码]]来定义行为
+4. 类型对象应该封装还是暴露
+   * 如果类型被封装
+     - 类型对象变为了实现细节, 降低了代码复杂度
+     - 持有对象可以选择性的重写部分类型对象的行为
+     - 需要给类型对象所有暴露的接口提供转发函数
+   * 如果类型对象被公开
+     - 外部对象可以无需怪物实例即可访问类型对象
+     - 将窄接口变宽了, 降低了维护性, 提高了复杂度
+5. 类型对象的创建
+   * 构造对象并传入类型对象 :: 外部代码可以自由控制内存分配
+   * 在类型对象上调用构造函数 :: 更加严格的控制内存的分配, 可以让所有的对象都来自
+     于同一个特定的内存池或者对象分配器
+6. 类型是否可变
+   * 类型不变
+     - 编码和理解起来都更简单, 更加容易调试
+   * 类型可变
+     - 减少了对象的创建次数
+     - 在切换对象时要注意约束对象的状态
+7. 支持何种类型派生
+   * 不支持 :: 简单但是会导致大量的重复劳动
+   * 单继承 :: 强大和简洁之间的完美平衡点, 继承会导致降低查找属性的速度
+   * 多继承 :: 过于复杂, 虽然完美设计可以一个几乎没有冗余的继承体系, 但是它的优点
+     更多停留在理论上而不是实践上, 举个简单的例子, 多重继承如何决定继承自哪个父类
+     获得?
+8. 相似模式
+   * 和[[*原型模式][原型模式]]的共同点在于它们都用来处理如何在不同对象之间共享数据,
+   * 和[[*享元模式][享元模式]]的区别在于, 享元模式着重于节省内存, 而此模式在于组织性和灵活性
+   * 和[[*状态模式][状态模式]]都把部分工作交给另一个代理对象
 * 组件模式
 * 事件队列
 * 服务定位器
