--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,13 +13,17 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-06-12 周六 19:00 ++1d> DEADLINE: <2021-06-12 周六 23:59 ++1d>
+** TODO [#A] 完成每日日报                                             :work:
+SCHEDULED: <2021-06-14 Mon 19:00 ++1d> DEADLINE: <2021-06-14 Mon 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-11 周五 16:55]
+:LAST_REPEAT: [2021-06-13 Sun 01:34]
 :END:
 
+- State "CANCELED"   from "TODO"       [2021-06-13 Sun 01:34] \\
+  放假
+- State "CANCELED"   from "TODO"       [2021-06-12 Sat 09:33] \\
+  放假
 - State "DONE"       from "TODO"       [2021-06-11 周五 16:55]
 - State "DONE"       from "TODO"       [2021-06-10 周四 21:15]
 - State "DONE"       from "TODO"       [2021-06-09 周三 20:58]
@@ -128,14 +132,16 @@ SCHEDULED: <2021-06-19 周六 18:00 ++1w> DEADLINE: <2021-06-21 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-06-12 周六 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-06-13 Sun 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-11 周五 09:58]
+:LAST_REPEAT: [2021-06-12 Sat 22:17]
 :END:
+- State "CANCELED"   from "TODO"       [2021-06-12 Sat 22:17] \\
+  没时间
 - State "DONE"       from "TODO"       [2021-06-11 周五 09:58]
 - State "DONE"       from "TODO"       [2021-06-10 周四 09:10]
 - State "DONE"       from "TODO"       [2021-06-09 周三 08:28]
@@ -210,14 +216,16 @@ SCHEDULED: <2021-06-12 周六 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
-SCHEDULED: <2021-06-12 周六 09:00 ++1d>
+** TODO [#A] 学习《游戏编程模式》                             :learn:ATTACH:
+SCHEDULED: <2021-06-13 Sun 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH:  [[attachment:游戏编程模式.org][游戏编程模式]] 
-:LAST_REPEAT: [2021-06-11 周五 11:43]
+:LAST_REPEAT: [2021-06-12 Sat 09:34]
 :ID:       9f4da250-7217-4dae-b806-bb1d74142050
 :END:
+- State "CANCELED"   from "TODO"       [2021-06-12 Sat 09:34] \\
+  放假
 - State "DONE"       from "TODO"       [2021-06-11 周五 11:43]
 - State "CANCELED"   from "TODO"       [2021-06-10 周四 21:07] \\
   没时间
