--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,13 +13,15 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-06-15 周二 19:00 ++1d> DEADLINE: <2021-06-15 周二 23:59 ++1d>
+** TODO [#A] 完成每日日报                                             :work:
+SCHEDULED: <2021-06-17 周四 19:00 ++1d> DEADLINE: <2021-06-17 周四 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-14 周一 16:46]
+:LAST_REPEAT: [2021-06-16 周三 21:10]
 :END:
 
+- State "DONE"       from "TODO"       [2021-06-16 周三 21:10]
+- State "DONE"       from "TODO"       [2021-06-15 周二 22:00]
 - State "CANCELED"   from "TODO"       [2021-06-14 周一 16:46] \\
   放假
 - State "CANCELED"   from "TODO"       [2021-06-13 Sun 01:34] \\
@@ -134,16 +136,16 @@ SCHEDULED: <2021-06-19 周六 18:00 ++1w> DEADLINE: <2021-06-21 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-06-13 Sun 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-06-17 周四 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-12 Sat 22:17]
+:LAST_REPEAT: [2021-06-16 周三 08:43]
 :END:
-- State "CANCELED"   from "TODO"       [2021-06-12 Sat 22:17] \\
-  没时间
+- State "DONE"       from "TODO"       [2021-06-16 周三 08:43]
+- State "DONE"       from "TODO"       [2021-06-15 周二 09:34]
 - State "DONE"       from "TODO"       [2021-06-11 周五 09:58]
 - State "DONE"       from "TODO"       [2021-06-10 周四 09:10]
 - State "DONE"       from "TODO"       [2021-06-09 周三 08:28]
@@ -219,15 +221,15 @@ SCHEDULED: <2021-06-13 Sun 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《游戏编程模式》                             :learn:ATTACH:
-SCHEDULED: <2021-06-13 Sun 09:00 ++1d>
+SCHEDULED: <2021-06-17 周四 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH:  [[attachment:游戏编程模式.org][游戏编程模式]] 
-:LAST_REPEAT: [2021-06-12 Sat 09:34]
+:LAST_REPEAT: [2021-06-16 周三 21:01]
 :ID:       9f4da250-7217-4dae-b806-bb1d74142050
 :END:
-- State "CANCELED"   from "TODO"       [2021-06-12 Sat 09:34] \\
-  放假
+- State "DONE"       from "TODO"       [2021-06-16 周三 21:01]
+- State "DONE"       from "TODO"       [2021-06-15 周二 11:35]
 - State "DONE"       from "TODO"       [2021-06-11 周五 11:43]
 - State "CANCELED"   from "TODO"       [2021-06-10 周四 21:07] \\
   没时间
@@ -272,7 +274,41 @@ CLOSED: [2021-06-07 周一 18:09] SCHEDULED: <2021-06-06 周日 09:00>
 - State "DONE"       from "TODO"       [2021-06-07 周一 18:09]
 * Appointment
 * Project
-** WAIT [#A] M8项目战斗逻辑模块梳理                               :m8:work:
+** SCH [#A] 组队车轮战                                                 :m8:work:
+SCHEDULED: <2021-06-15 周二 13:00> DEADLINE: <2021-06-19 周六 21:00>
+:Properties:
+:Blocker: children
+:END:                          
+*** DONE 修改组队英雄山导表
+CLOSED: [2021-06-15 周二 14:13] SCHEDULED: <2021-06-15 周二 13:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "TODO"       [2021-06-15 周二 14:13]
+*** DONE 实现组队多队模型
+CLOSED: [2021-06-15 周二 22:00] SCHEDULED: <2021-06-15 周二 14:13>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-06-15 周二 22:00]
+*** DONE 实现组队英雄选择组件
+CLOSED: [2021-06-16 周三 17:35] SCHEDULED: <2021-06-15 周二 22:00>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-06-16 周三 17:35]
+*** DONE 实现网络协议
+CLOSED: [2021-06-16 周三 17:35] SCHEDULED: <2021-06-16 周三 17:35>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-06-16 周三 17:35]
+*** TODO 测试
+SCHEDULED: <2021-06-16 周三 17:35>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 制作临时组队功能                                    :work:m8:
 CLOSED: [2021-05-28 周五 15:54] SCHEDULED: <2021-05-25 周二 09:00> DEADLINE: <2021-05-29 周六 21:00>
