--- a/src/org/ref/liwei_engine.org
+++ b/src/org/ref/liwei_engine.org
@@ -263,6 +263,7 @@ Wrong: m_happen, m_ID_Scroll
 **** 真机包外网调试方法
 - 下载iTools, 如果应用打开了文件共享, 找到此应用双击可以浏览此应用的日志
 ** 坑
-1. Richtext的SetString调用之后SetAlignMode会失效
+1. Richtext调整大小之后SetAlignMode会失效
 2. 新建新的UI文件夹时如果导入失败, 可能是没有加__init__.py
 3. IOS如果首次登陆时没有弹出网络权限配置请求, 可以使用C_sys.IsEnableNetwork来主动触发
+4. 严格注意信号的使用, 很多信号关联着大量的页面刷新, 滥用信号很有可能导致卡顿
