--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -20,6 +20,7 @@ SCHEDULED: <2021-06-17 周四 19:00 ++1d> DEADLINE: <2021-06-17 周四 23:59 ++1
 :LAST_REPEAT: [2021-06-16 周三 21:10]
 :END:
 
+
 - State "DONE"       from "TODO"       [2021-06-16 周三 21:10]
 - State "DONE"       from "TODO"       [2021-06-15 周二 22:00]
 - State "CANCELED"   from "TODO"       [2021-06-14 周一 16:46] \\
@@ -137,13 +138,15 @@ SCHEDULED: <2021-06-19 周六 18:00 ++1w> DEADLINE: <2021-06-21 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-06-17 周四 19:00 ++1d>
+SCHEDULED: <2021-06-18 周五 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-16 周三 08:43]
+:LAST_REPEAT: [2021-06-17 周四 09:35]
 :END:
+
+- State "DONE"       from "TODO"       [2021-06-17 周四 09:35]
 - State "DONE"       from "TODO"       [2021-06-16 周三 08:43]
 - State "DONE"       from "TODO"       [2021-06-15 周二 09:34]
 - State "DONE"       from "TODO"       [2021-06-11 周五 09:58]
@@ -220,14 +223,15 @@ SCHEDULED: <2021-06-17 周四 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《游戏编程模式》                             :learn:ATTACH:
-SCHEDULED: <2021-06-17 周四 09:00 ++1d>
+** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
+SCHEDULED: <2021-06-18 周五 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH:  [[attachment:游戏编程模式.org][游戏编程模式]] 
-:LAST_REPEAT: [2021-06-16 周三 21:01]
+:LAST_REPEAT: [2021-06-17 周四 11:26]
 :ID:       9f4da250-7217-4dae-b806-bb1d74142050
 :END:
+- State "DONE"       from "TODO"       [2021-06-17 周四 11:26]
 - State "DONE"       from "TODO"       [2021-06-16 周三 21:01]
 - State "DONE"       from "TODO"       [2021-06-15 周二 11:35]
 - State "DONE"       from "TODO"       [2021-06-11 周五 11:43]
