--- a/src/org/ref/游戏编程模式.org
+++ b/src/org/ref/游戏编程模式.org
@@ -1134,7 +1134,120 @@
 7. 注意队列对象的生命周期, 是内存自己管理, 还是自己手动管理
 8. 可以将事件队列理解为[[*观察者模式][观察者模式]]的异步版本
 * 服务定位器
+1. 什么是服务定位器
+   #+BEGIN_VERSE
+   "为某服务提供一个全局访问入口来避免使用者与该服务具体实现类之间产生耦合"
+   一个服务类为一系列操作定义了一个抽象的接口, 一个具体的服务提供器实现这个接口,
+   服务类屏蔽了提供器的具体类型以及定位服务的过程.
+   通俗的来讲, 类似公共电话本, 你把你的电话提供给公共电话本, 其他人通过查询电话
+   本来查看你的号码, 而不是直接拥有你的号码, 这样当你修改自己的号码时只需要告诉
+   电话本即可, 而不需要告诉每一个知道你电话的人.
+   #+END_VERSE
+2. 经典场景, 音频服务
+   #+BEGIN_SRC c++
+     class Audio {
+      public:
+       virtual ~Audio() {}
+       virtual void playSound(int soundID) = 0;
+       virtual void stopSound(int soundID) = 0;
+       virtual void stopAllSounds() = 0;
+     };
+
+     class ConsoleAudio: public Audio {  // 具体服务提供类
+       // 具体实现
+     };
+
+     class NullAudio: public Audio {  // 空服务
+       // 具体实现
+     };
+
+     class LogAudio: public Audio {  // 带日志的音频
+       // 具体实现
+     };
+
+     class Locator {
+      public:
+       static void initialize() {   // 当没有注册时, 默认提供空服务
+         _service = &_null_service;
+       }
+       static Audio* getAudio() {return _service;}
+
+       static void provide(Audio* service) {
+         if (service == nullptr) {
+           service = &_null_service;
+         }
+         _service = service;
+       }
+
+      private:
+       static Audio* _service;
+       static NullAudio _null_service;
+     };
+
+     // 动态装饰现存的audio服务
+     void enableAudioLogging() {
+       Audio* service = new LogAudio(Locator::getAudio());
+       Locator::provide(service);
+     }
+   #+END_SRC
+   通过提供空服务来避免没有提供服务导致的异常, 通过locator的抽象使得我们可以动态
+   替换音频服务的功能, 非常健壮灵活.
+3. 使用场景
+   * 服务定位器也是全局变量, 谨慎使用, 本质上是一个灵活的[[*单例模式][单例模式]]
+   * 在使用此模式之前有限考虑能不能将对象作为一个参数传入, 提供直观的耦合可以满足
+     大部分需求
+   * 有一些基础系统(日志, 音频, 内存), 为了让底层使用而传递了很多层是毫无必要的,
+     此时可以使用服务定位器
+4. 服务如何被定位
+   * 外部代码注册
+     - 简单快捷
+     - 我们控制了提供器如何构建
+     - 可以运行时动态替换提供器
+     - 使用前必须要注册, 不然可能导致bug
+   * 编译时绑定
+     - 简单快速
+     - 可以保证服务可用, 定位器里可以确定进行了初始化
+     - 不便于修改, 每次修改需要重新编译
+   * 在运行时配置
+     - 重量级解决方案, 需要一个配置系统
+     - 定位服务需要消耗时间
+     - 非程序人员也可以更换提供器
+     - 一份代码库支持多分配置
+5. 当服务不能被定位时发生什么
+   * 让使用者解决
+     使用者必须解决失败, 但是也提供了灵活性
+   * 终止游戏
+     - 使用者不需要处理丢失的服务
+     - 大型工作团队因为游戏终止可能会浪费大量的时间
+   * 返回一个空服务
+     - 使用者不需要处理丢失的服务
+     - 当服务不可用时, 游戏还可以继续运行(双刃剑, 难于寻找bug)
+6. 服务定位器的域
+   * 全局访问
+     - 鼓励整个代码库使用一个服务
+     - 对何时何地使用服务失去了控制
+   * 如果限制到类中
+     - 控制了耦合
+     - 可能会导致重复的工作, 可能很多类都需要这个定位器, 但是都需要各自处理
+   一般原则是, 如果服务只在一个域之中使用, 那么便限制到类中. 如果更广泛的服务, 比
+   如日志系统, 应该是全局的.
 * 数据局部性
+1. 什么是数据局部性
+   #+BEGIN_VERSE
+   #+END_VERSE
+2. 经典场景
 * 脏标记模式
+1. 什么是脏标记模式
+   #+BEGIN_VERSE
+   #+END_VERSE
+2. 经典场景
 * 对象池
+1. 什么是对象池
+   #+BEGIN_VERSE
+   #+END_VERSE
+2. 经典场景
 * 空间分区
+1. 什么是空间分区
+   #+BEGIN_VERSE
+   #+END_VERSE
+2. 经典场景
